log/build_2023-06-02_15-56-42/beagle_first_package/stderr.log
/home/k/.local/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/k/robo/install/beagle_first_package/lib/python3.8/site-packages/beagle_first_package/beagle_service_server.py", line 31
    self.
        ^
SyntaxError: invalid syntax

